fixed for spacing on small screens

--- a/style.css
+++ b/style.css
@@ -2,4 +2,9 @@
   .custom {
     grid-column: span 2/ span 2 !important;
   }
+
+  .form > input {
+    width: 60% !important;
+    gap: 0;
+  }
 }
